# kaychaks.github.io

./: .gitignore  CNAME  archive.html  atom.xml  blog-hakyll.cabal  cabal.project.freeze  default.nix  devenv.nix  hie.yaml  importer.hs  index.html  keybase.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  resume.html  resume.md  shell.nix  site.hs  updater  versions.json
.circleci/: config.yml  config.yml.old
.github/: dependabot.yml
.well-known/: keybase.txt
archive/: blog-hakyll.cabal  site.hs
archive/css/: style.css
archive/posts/: a-post-for-medium.md  apple-pay-on-the-web.md  bad-mouthing-world-cup-day-13.md  cliffhangers-world-cup-day-11.md  english-hooliganism-far-better-show-than-their-game.md  english-misery-continues-world-cup-day-8.md  european-misery-continues-world-cup-day-9.md  goalkeeper-gods-world-cup-knockouts-day-3.md  goals-galore-world-cup-day-14.md  last-minute-twists-world-cup-knockouts-day-2.md  late-awakening-world-cup-day-15.md  medium-to-the-next-level.md  new-man-at-merseyside.md  quit-cribbing-about-homeopathy.md  rise-of-underdogs-world-cup-day-3.md  rough-game-world-cup-quarters-day-1.md  taking-notes.md  the-desolation-world-cup-first-semifinal.md  the-unbelievables-world-cup-day-10.md  wadlers-act-in-strangeloop.md
archive/templates/: archive.html  post-list.html
blog-hakyll.materialized/: default.nix
css/: custom.css  default-micro.css  default.css  micro.css  style.css  syntax.css
drafts/: wc2018-day12.md  wc2018-day17.md  wc2018-day18.md  wc2018-day2.md  wc2018-day4.md  wc2018-day6.md  wc2018-day7.md
(+508 files in other folders)
