name:               blog-hakyll
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  -- other-modules:    Importer
  build-depends:    base >= 4.6 && < 5
                  , hakyll == 4.*
                  , containers           >= 0.3
                  , time                 >= 1.4
                  , time-locale-compat   >= 0.1
                  , aeson
                  , lens
                  , lens-aeson
                  , text
                  , bytestring
                  , vector
                  , mtl
                  , regex-pcre
  ghc-options:      -threaded
  default-language: Haskell2010
