name:               blog-hakyll
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  other-modules:    Importer
  build-depends:    base == 4.*
                  , hakyll == 4.9.*
                  , containers           >= 0.3    && < 0.6
                  , time                 >= 1.4    && < 1.8
                  , time-locale-compat   >= 0.1    && < 0.2
                  , aeson
                  , lens
                  , lens-aeson
                  , text
                  , bytestring
                  , vector
                  , mtl
                  , regex-pcre
  ghc-options:      -threaded
  default-language: Haskell2010
